--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/cloudprojectapp?serverTimezone
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url= jdbc:mysql://us-cdbr-east-04.cleardb.com:3306/heroku_c98ab6266b4e365?serverTimezone
+spring.datasource.username=bf96a0c614b486
+spring.datasource.password=6081c0bf
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
